--- a/force-app/main/default/lwc/datatatableCmp/datatatableCmp.html
+++ b/force-app/main/default/lwc/datatatableCmp/datatatableCmp.html
@@ -9,6 +9,11 @@
                 hide-checkbox-column
                 columns={columnList}
                 onrowaction={handleRowAction}
+                sorted-by={sortBy}
+                sorted-direction={sortDirection}
+                onsort={handleSortData}
+                onsave={handleSave}
+                draft-values={draftValues}
             >
             </lightning-datatable>
         </div>
