--- a/force-app/main/default/lwc/lDS_UpdateRecordDemo/lDS_UpdateRecordDemo.html
+++ b/force-app/main/default/lwc/lDS_UpdateRecordDemo/lDS_UpdateRecordDemo.html
@@ -1,9 +1,9 @@
 <template>
     <lightning-card title="Record UI : Update Record Demo ✏️" variant="Narrow" icon-name="standard:contact">
         <div class="slds-m-around_large">
-            <lightning-input type="text" label="First name" placeholder="First name"></lightning-input>
-            <lightning-input type="text" label="Last name" placeholder="Last name"></lightning-input>
-            <lightning-input type="text" label="Email" placeholder="Email"></lightning-input>
+            <lightning-input type="text" label="First name" name="FirstName" value={firstname} placeholder="First name" onchange={handleChange}></lightning-input>
+            <lightning-input type="text" label="Last name" name="LastName" value={lastname} placeholder="Last name" onchange={handleChange}></lightning-input>
+            <lightning-input type="text" label="Email" name="Email" value={email} placeholder="Email" onchange={handleChange}></lightning-input>
         </div>
         <div class="slds-m-around_large">
             <lightning-button variant="brand" label="Update Record  " onclick={handleUpdate}></lightning-button>
