--- a/force-app/main/default/lwc/lightningDatatable_CustomType_Demo1/lightningDatatable_CustomType_Demo1.html
+++ b/force-app/main/default/lwc/lightningDatatable_CustomType_Demo1/lightningDatatable_CustomType_Demo1.html
@@ -1,11 +1,11 @@
 <template>
     <lightning-card  variant="Narrow"  title="Custom Datatype Lightning Table Demo" icon-name="standard:contact">
         <div>
-            <lightning-datatable
+            <c-custom-data-type_-lightning-datatable
                 key-field="Id"
                 data={contactsData}
                 columns={columns}>
-        </lightning-datatable>
+        </c-custom-data-type_-lightning-datatable>
         </div>
         <p slot="footer">Custom Datatable with Custom Type </p>
     </lightning-card>
