--- a/force-app/main/default/lwc/customDataType_LightningDatatable/customName.html
+++ b/force-app/main/default/lwc/customDataType_LightningDatatable/customName.html
@@ -1,3 +1,3 @@
 <template>
-    <lightning-badge label={typeAttributes.accountName} icon-name="standard:contact"></lightning-badge>
+    <lightning-badge label={typeAttributes.contactName} icon-name="standard:contact"></lightning-badge>
 </template>
